# LeagueOfLegends-TwistedTreeline

./: .gitignore  CLAUDE.md  INVENTORY.md  README.md
project/: Cargo.toml  lol-studio.desktop
project/crates/sg-ai/: Cargo.toml
project/crates/sg-ai/src/: champion_ai.rs  jungle_ai.rs  lib.rs  minion_ai.rs  turret_ai.rs
project/crates/sg-client/: Cargo.toml
project/crates/sg-client/assets/hud/: bottom_bar.html
project/crates/sg-client/assets/maps/: twisted_treeline.glb
project/crates/sg-client/assets/models/champions/: annie.glb  garen.glb  singed_animated.glb  tibbers.glb
project/crates/sg-client/assets/models/minions/: chaos_minion_caster.glb  chaos_minion_melee.glb  chaos_minion_siege.glb  order_minion_caster.glb  order_minion_melee.glb  order_minion_siege.glb
project/crates/sg-client/assets/models/props/: aipath.glb  chaosshop01.glb  levelprop_teemo.glb  levelprop_tryndamere.glb  levelprop_tt_brazier1.glb  levelprop_tt_brazier2.glb  levelprop_tt_brazier3.glb  levelprop_tt_brazier4.glb  levelprop_tt_brazier5.glb  levelprop_tt_brazier6.glb  (+26 more)
project/crates/sg-client/src/: ability_plugin.rs  audio_plugin.rs  auto_test.rs  camera_plugin.rs  combat_plugin.rs  debug_plugin.rs  fog_plugin.rs  garen_plugin.rs  hud_plugin.rs  input_plugin.rs  main.rs  map_plugin.rs  minion_plugin.rs  movement_plugin.rs  navigation_plugin.rs  net_plugin.rs  objectives_plugin.rs  shop_plugin.rs  spawn_plugin.rs  test_main.rs
project/crates/sg-client/src/menu/: champion_select.rs  collection_screen.rs  data.rs  home_screen.rs  loading_screen.rs  lobby_screen.rs  mod.rs  postgame_screen.rs  profile_screen.rs  rune_editor.rs  settings_screen.rs  styles.rs
project/crates/sg-core/: Cargo.toml
project/crates/sg-core/src/: components.rs  constants.rs  lib.rs  runes.rs  spells.rs  types.rs
project/crates/sg-editor/: Cargo.toml
project/crates/sg-editor/src/: main.rs  state.rs
project/crates/sg-gameplay/: Cargo.toml
project/crates/sg-gameplay/src/: abilities.rs  buffs.rs  champions.rs  combat.rs  economy.rs  items.rs  leveling.rs  lib.rs
project/crates/sg-map/: Cargo.toml
project/crates/sg-map/src/: layout.rs  lib.rs  spawns.rs
project/crates/sg-navigation/: Cargo.toml
project/crates/sg-navigation/src/: lib.rs
project/crates/sg-protocol/: Cargo.toml
project/crates/sg-protocol/src/: lib.rs
project/crates/sg-server/: Cargo.toml
project/crates/sg-server/src/: main.rs
project/docs/: GAME_DESIGN_DOCUMENT.md  LOL_CLIENT_REFERENCE.md
project/tools/: gen_thumbnails.py
(+1 files in other folders)
