[workspace]
resolver = "2"
members = [
    "crates/sg-core",
    "crates/sg-server",
    "crates/sg-client",
    "crates/sg-protocol",
    "crates/sg-gameplay",
    "crates/sg-map",
    "crates/sg-ai",
    "crates/sg-navigation",
    "crates/sg-editor",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Louis Delez"]

[workspace.dependencies]
bevy = "0.18"
bevy_hui = "0.6"
bincode = "1"
# lightyear = { version = "0.26", features = ["client", "server", "replication", "prediction", "interpolation"] }
# lightyear_udp = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"

