[package]
name = "sg-client"
description = "Game client with rendering"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sg-client"
path = "src/main.rs"

[dependencies]
bevy = { workspace = true }
bevy_hui = { workspace = true }
bincode = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sg-core = { path = "../sg-core" }
sg-protocol = { path = "../sg-protocol" }
sg-map = { path = "../sg-map" }
sg-gameplay = { path = "../sg-gameplay" }
sg-ai = { path = "../sg-ai" }
